[tool.poetry]
name = "video-converter"
version = "0.1.0"
description = ""
authors = ["q4kk <quantumstar4k@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ffmpeg-python = "^0.2.0"

[tool.poetry.group.dev.dependencies]
ffmpeg-python = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
