[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["q4kk <quantumstar4k@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
ffmpeg-python = "^0.2.0"
wmi = "^1.5.1"

[tool.poetry.group.dev.dependencies]
ffmpeg-python = "^0.2.0"
ffmpeg = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
